Lightning-9/video-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-10-23T08:39:45Z"
  name: video-service
  namespace: default
  resourceVersion: "7979"
  uid: fcb23cf5-22ab-4ef3-acf6-726695b4c2cd
spec:
  clusterIP: 10.99.122.170
  clusterIPs:
  - 10.99.122.170
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-video
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
